@@ -21,7 +21,7 @@ import org.prebid.server.auction.model.AuctionContext;
 import org.prebid.server.auction.model.DebugContext;
 import org.prebid.server.auction.model.IpAddress;
 import org.prebid.server.cookie.UidsCookieService;
-import org.prebid.server.deals.DealsProcessor;
+import org.prebid.server.deals.DealsPopulator;
 import org.prebid.server.deals.model.DeepDebugLog;
 import org.prebid.server.deals.model.TxnLog;
 import org.prebid.server.exception.BlacklistedAccountException;
@@ -30,6 +30,7 @@ import org.prebid.server.exception.PreBidException;
 import org.prebid.server.exception.UnauthorizedAccountException;
 import org.prebid.server.execution.Timeout;
 import org.prebid.server.execution.TimeoutFactory;
+import org.prebid.server.floors.PriceFloorProcessor;
 import org.prebid.server.geolocation.CountryCodeMapper;
 import org.prebid.server.geolocation.model.GeoInfo;
 import org.prebid.server.hooks.execution.HookStageExecutor;
@@ -39,6 +40,7 @@ import org.prebid.server.hooks.v1.auction.AuctionRequestPayload;
 import org.prebid.server.hooks.v1.entrypoint.EntrypointPayload;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.metric.MetricName;
+import org.prebid.server.metric.Metrics;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
@@ -78,10 +80,12 @@ public class Ortb2RequestFactory {
     private final TimeoutFactory timeoutFactory;
     private final StoredRequestProcessor storedRequestProcessor;
     private final ApplicationSettings applicationSettings;
-    private final DealsProcessor dealsProcessor;
+    private final DealsPopulator dealsPopulator;
     private final IpAddressHelper ipAddressHelper;
     private final HookStageExecutor hookStageExecutor;
+    private final PriceFloorProcessor priceFloorProcessor;
     private final CountryCodeMapper countryCodeMapper;
+    private final Metrics metrics;
     private final Clock clock;
 
     public Ortb2RequestFactory(boolean enforceValidAccount,
@@ -94,8 +98,10 @@ public class Ortb2RequestFactory {
                                ApplicationSettings applicationSettings,
                                IpAddressHelper ipAddressHelper,
                                HookStageExecutor hookStageExecutor,
-                               DealsProcessor dealsProcessor,
+                               DealsPopulator dealsPopulator,
+                               PriceFloorProcessor priceFloorProcessor,
                                CountryCodeMapper countryCodeMapper,
+                               Metrics metrics,
                                Clock clock) {
 
         this.enforceValidAccount = enforceValidAccount;
@@ -108,8 +114,10 @@ public class Ortb2RequestFactory {
         this.applicationSettings = Objects.requireNonNull(applicationSettings);
         this.ipAddressHelper = Objects.requireNonNull(ipAddressHelper);
         this.hookStageExecutor = Objects.requireNonNull(hookStageExecutor);
-        this.dealsProcessor = dealsProcessor;
+        this.dealsPopulator = dealsPopulator;
+        this.priceFloorProcessor = Objects.requireNonNull(priceFloorProcessor);
         this.countryCodeMapper = Objects.requireNonNull(countryCodeMapper);
+        this.metrics = Objects.requireNonNull(metrics);
         this.clock = Objects.requireNonNull(clock);
     }
 
@@ -196,10 +204,10 @@ public class Ortb2RequestFactory {
                                                              AuctionContext auctionContext) {
 
         return hookStageExecutor.executeEntrypointStage(
-                toCaseInsensitiveMultiMap(routingContext.queryParams()),
-                toCaseInsensitiveMultiMap(routingContext.request().headers()),
-                body,
-                auctionContext.getHookExecutionContext())
+                        toCaseInsensitiveMultiMap(routingContext.queryParams()),
+                        toCaseInsensitiveMultiMap(routingContext.request().headers()),
+                        body,
+                        auctionContext.getHookExecutionContext())
                 .map(stageResult -> toHttpRequest(stageResult, routingContext, auctionContext));
     }
 
@@ -252,9 +260,13 @@ public class Ortb2RequestFactory {
     }
 
     public Future<AuctionContext> populateDealsInfo(AuctionContext auctionContext) {
-        return dealsProcessor != null
-                ? dealsProcessor.populateDealsInfo(auctionContext)
+        return dealsPopulator != null
+                ? dealsPopulator.populate(auctionContext)
                 : Future.succeededFuture(auctionContext);
+    }
+
+    public AuctionContext enrichWithPriceFloors(AuctionContext auctionContext) {
+        return priceFloorProcessor.enrichWithPriceFloors(auctionContext);
     }
 
     /**
@@ -270,7 +282,7 @@ public class Ortb2RequestFactory {
         final String accountId = accountIdFrom(bidRequest);
         return StringUtils.isNotBlank(accountId) || !isLookupStoredRequest
                 ? Future.succeededFuture(accountId)
-                : storedRequestProcessor.processStoredRequests(accountId, bidRequest)
+                : storedRequestProcessor.processAuctionRequest(accountId, bidRequest)
                 .map(this::accountIdFrom);
     }
 
@@ -280,8 +292,8 @@ public class Ortb2RequestFactory {
                 && blacklistedAccounts.contains(accountId)) {
 
             throw new BlacklistedAccountException(
-                    String.format("Prebid-server has blacklisted Account ID: %s, please "
-                            + "reach out to the prebid server host.", accountId));
+                    "Prebid-server has blacklisted Account ID: %s, please reach out to the prebid server host."
+                            .formatted(accountId));
         }
         return accountId;
     }
@@ -289,11 +301,15 @@ public class Ortb2RequestFactory {
     private Future<Account> loadAccount(Timeout timeout,
                                         HttpRequestContext httpRequest,
                                         String accountId) {
-        return StringUtils.isBlank(accountId)
+
+        final Future<Account> accountFuture = StringUtils.isBlank(accountId)
                 ? responseForEmptyAccount(httpRequest)
                 : applicationSettings.getAccountById(accountId, timeout)
                 .compose(this::ensureAccountActive,
                         exception -> accountFallback(exception, accountId, httpRequest));
+
+        return accountFuture
+                .onFailure(ignored -> metrics.updateAccountRequestRejectedByInvalidAccountMetrics(accountId));
     }
 
     /**
@@ -334,8 +350,7 @@ public class Ortb2RequestFactory {
     }
 
     private static String accountErrorMessage(String message, HttpRequestContext httpRequest) {
-        return String.format(
-                "%s, Url: %s and Referer: %s",
+        return "%s, Url: %s and Referer: %s".formatted(
                 message,
                 httpRequest.getAbsoluteUri(),
                 httpRequest.getHeaders().get(HttpUtil.REFERER_HEADER));
@@ -359,7 +374,7 @@ public class Ortb2RequestFactory {
     private Future<Account> responseForUnknownAccount(String accountId) {
         return enforceValidAccount
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Unauthorized account id: %s", accountId), accountId))
+                "Unauthorized account id: " + accountId, accountId))
                 : Future.succeededFuture(Account.empty(accountId));
     }
 
@@ -368,7 +383,7 @@ public class Ortb2RequestFactory {
 
         return account.getStatus() == AccountStatus.inactive
                 ? Future.failedFuture(new UnauthorizedAccountException(
-                String.format("Account %s is inactive", accountId), accountId))
+                "Account %s is inactive".formatted(accountId), accountId))
                 : Future.succeededFuture(account);
     }
 
