@@ -131,6 +131,8 @@ public class VideoRequestFactory {
 
                 .compose(ortb2RequestFactory::populateDealsInfo)
 
+                .map(ortb2RequestFactory::enrichWithPriceFloors)
+
                 .recover(ortb2RequestFactory::restoreResultFromRejection)
 
                 .map(this::updateContextWithDebugLog)
@@ -145,8 +147,7 @@ public class VideoRequestFactory {
         }
 
         if (body.length() > maxRequestSize) {
-            throw new InvalidRequestException(String.format("Request size exceeded max size of %d bytes.",
-                    maxRequestSize));
+            throw new InvalidRequestException("Request size exceeded max size of %d bytes.".formatted(maxRequestSize));
         }
 
         return body;
