@@ -2,6 +2,7 @@ package org.prebid.server.bidder;
 
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.BidRequest;
+import io.netty.handler.codec.http.HttpHeaderValues;
 import io.vertx.core.MultiMap;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
@@ -10,11 +11,13 @@ import org.prebid.server.proto.openrtb.ext.request.ExtAppPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidChannel;
+import org.prebid.server.spring.config.bidder.model.CompressionType;
 import org.prebid.server.util.HttpUtil;
 import org.prebid.server.version.PrebidVersionProvider;
 
 import java.util.Collections;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -25,11 +28,15 @@ public class HttpBidderRequestEnricher {
 
     private final PrebidVersionProvider prebidVersionProvider;
 
-    public HttpBidderRequestEnricher(PrebidVersionProvider prebidVersionProvider) {
+    private final BidderCatalog bidderCatalog;
+
+    public HttpBidderRequestEnricher(PrebidVersionProvider prebidVersionProvider, BidderCatalog bidderCatalog) {
         this.prebidVersionProvider = Objects.requireNonNull(prebidVersionProvider);
+        this.bidderCatalog = Objects.requireNonNull(bidderCatalog);
     }
 
     MultiMap enrichHeaders(
+            String bidderName,
             MultiMap bidderRequestHeaders,
             CaseInsensitiveMultiMap originalRequestHeaders,
             BidRequest bidRequest) {
@@ -37,8 +44,9 @@ public class HttpBidderRequestEnricher {
         // some bidders has headers on class level, so we create copy to not affect them
         final MultiMap bidderRequestHeadersCopy = copyMultiMap(bidderRequestHeaders);
 
-        addOriginalRequestHeaders(originalRequestHeaders, bidderRequestHeadersCopy);
+        addOriginalRequestHeaders(bidderRequestHeadersCopy, originalRequestHeaders);
         addXPrebidHeader(bidderRequestHeadersCopy, bidRequest);
+        addContentEncodingHeader(bidderRequestHeadersCopy, resolveCompressionType(bidderName));
 
         return bidderRequestHeadersCopy;
     }
@@ -51,7 +59,7 @@ public class HttpBidderRequestEnricher {
         return copiedMultiMap;
     }
 
-    private static void addOriginalRequestHeaders(CaseInsensitiveMultiMap originalHeaders, MultiMap bidderHeaders) {
+    private static void addOriginalRequestHeaders(MultiMap bidderHeaders, CaseInsensitiveMultiMap originalHeaders) {
         originalHeaders.entries().stream()
                 .filter(entry -> HEADERS_TO_COPY.contains(entry.getKey())
                         && !bidderHeaders.contains(entry.getKey()))
@@ -88,7 +96,19 @@ public class HttpBidderRequestEnricher {
 
     private static String createNameVersionRecord(String name, String version) {
         return StringUtils.isNoneEmpty(name, version)
-                ? String.format("%s/%s", name, version)
+                ? "%s/%s".formatted(name, version)
                 : null;
+    }
+
+    private static void addContentEncodingHeader(MultiMap bidderHeaders, CompressionType compressionType) {
+        if (compressionType == CompressionType.GZIP) {
+            bidderHeaders.add(HttpUtil.CONTENT_ENCODING_HEADER, HttpHeaderValues.GZIP);
+        }
+    }
+
+    private CompressionType resolveCompressionType(String bidderName) {
+        return Optional.ofNullable(bidderCatalog.bidderInfoByName(bidderName))
+                .map(BidderInfo::getCompressionType)
+                .orElse(CompressionType.NONE);
     }
 }
