@@ -1,25 +1,32 @@
 package org.prebid.server.bidder.algorix;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
+import com.iab.openrtb.request.Video;
+import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.MultiMap;
 import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
+import org.prebid.server.bidder.algorix.model.AlgorixVideoExt;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
 import org.prebid.server.proto.openrtb.ext.request.algorix.ExtImpAlgorix;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.util.HttpUtil;
@@ -29,14 +36,13 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * AlgoriX (@link Bidder) implementation.
  */
 public class AlgorixBidder implements Bidder<BidRequest> {
 
-    private static final TypeReference<ExtPrebid<?, ExtImpAlgorix>> ALGORIX_EXT_TYPE_REFERENCE =
+    private static final TypeReference<ExtPrebid<ExtImpPrebid, ExtImpAlgorix>> ALGORIX_EXT_TYPE_REFERENCE =
             new TypeReference<>() {
             };
 
@@ -63,8 +69,9 @@ public class AlgorixBidder implements Bidder<BidRequest> {
 
         for (Imp imp : request.getImp()) {
             try {
-                extImpAlgorix = extImpAlgorix == null ? parseImpExt(imp) : extImpAlgorix;
-                updatedImps.add(updateImp(imp));
+                final ExtPrebid<ExtImpPrebid, ExtImpAlgorix> impExt = parseImpExt(imp);
+                extImpAlgorix = extImpAlgorix == null ? impExt.getBidder() : extImpAlgorix;
+                updatedImps.add(updateImp(imp, impExt.getPrebid()));
             } catch (PreBidException error) {
                 errors.add(BidderError.badInput(error.getMessage()));
             }
@@ -86,39 +93,47 @@ public class AlgorixBidder implements Bidder<BidRequest> {
                 errors);
     }
 
-    /**
-     * Parse Ext Imp
-     *
-     * @param imp BidRequest Imp
-     * @return Algorix Ext Imp
-     */
-    private ExtImpAlgorix parseImpExt(Imp imp) {
+    private ExtPrebid<ExtImpPrebid, ExtImpAlgorix> parseImpExt(Imp imp) {
         try {
-            return mapper.mapper().convertValue(imp.getExt(), ALGORIX_EXT_TYPE_REFERENCE).getBidder();
+            return mapper.mapper().convertValue(imp.getExt(), ALGORIX_EXT_TYPE_REFERENCE);
         } catch (IllegalArgumentException error) {
-            throw new PreBidException(String.format("Impression Id=%s, has invalid Ext", imp.getId()));
+            throw new PreBidException("Impression Id=%s, has invalid Ext".formatted(imp.getId()));
         }
     }
 
-    /**
-     * Update Imp for transform banner Size
-     *
-     * @param imp imp
-     * @return new imp
-     */
-    private static Imp updateImp(Imp imp) {
+    private Imp updateImp(Imp imp, ExtImpPrebid extImpPrebid) {
         if (imp.getBanner() != null) {
-            final Banner banner = imp.getBanner();
-            if (!(isValidSizeValue(banner.getW()) && isValidSizeValue(banner.getH()))
-                    && CollectionUtils.isNotEmpty(banner.getFormat())) {
-                final Format firstFormat = banner.getFormat().get(FIRST_INDEX);
-                imp = imp.toBuilder()
-                        .banner(banner.toBuilder()
-                                .w(firstFormat.getW())
-                                .h(firstFormat.getH())
-                                .build())
-                        .build();
-            }
+            imp = updateBannerImp(imp);
+        }
+        if (imp.getVideo() != null) {
+            imp = updateVideoImp(imp, extImpPrebid);
+        }
+        return imp;
+    }
+
+    private Imp updateBannerImp(Imp imp) {
+        final Banner banner = imp.getBanner();
+        if (!(isValidSizeValue(banner.getW()) && isValidSizeValue(banner.getH()))
+                && CollectionUtils.isNotEmpty(banner.getFormat())) {
+            final Format firstFormat = banner.getFormat().get(FIRST_INDEX);
+            return imp.toBuilder()
+                    .banner(banner.toBuilder()
+                            .w(firstFormat.getW())
+                            .h(firstFormat.getH())
+                            .build())
+                    .build();
+        }
+        return imp;
+    }
+
+    private Imp updateVideoImp(Imp imp, ExtImpPrebid extImpPrebid) {
+        if (extImpPrebid != null && Objects.equals(extImpPrebid.getIsRewardedInventory(), 1)) {
+            final Video video = imp.getVideo();
+            return imp.toBuilder()
+                    .video(video.toBuilder()
+                            .ext(mapper.mapper().valueToTree(AlgorixVideoExt.of(1)))
+                            .build())
+                    .build();
         }
         return imp;
     }
@@ -133,34 +148,17 @@ public class AlgorixBidder implements Bidder<BidRequest> {
         return value != null && value > 0;
     }
 
-    /**
-     * get Region Info From Algorix Ext Imp
-     * Default For Global EP, APAC for apse EP, USE for use EP
-     *
-     * @param extImp Algorix Ext Imp
-     * @return Region String
-     */
     private static String getRegionInfo(ExtImpAlgorix extImp) {
         if (Objects.isNull(extImp.getRegion())) {
             return "xyz";
         }
-        switch (extImp.getRegion()) {
-            case "APAC":
-                return "apac.xyz";
-            case "USE":
-                return "use.xyz";
-            default:
-                return "xyz";
-        }
+        return switch (extImp.getRegion()) {
+            case "APAC" -> "apac.xyz";
+            case "USE" -> "use.xyz";
+            default -> "xyz";
+        };
     }
 
-    /**
-     * Replace url macro
-     *
-     * @param endpoint endpoint Url
-     * @param extImp   Algorix Ext Imp
-     * @return target Url
-     */
     private static String resolveUrl(String endpoint, ExtImpAlgorix extImp) {
         return endpoint
                 .replace(URL_REGION_MACRO, getRegionInfo(extImp))
@@ -168,11 +166,6 @@ public class AlgorixBidder implements Bidder<BidRequest> {
                 .replace(URL_TOKEN_MACRO, extImp.getToken());
     }
 
-    /**
-     * Add openrtb version header 2.5
-     *
-     * @return headers
-     */
     private static MultiMap resolveHeaders() {
         final MultiMap headers = HttpUtil.headers();
         headers.add(HttpUtil.X_OPENRTB_VERSION_HEADER, "2.5");
@@ -180,7 +173,7 @@ public class AlgorixBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.of(extractBids(httpCall.getRequest().getPayload(), bidResponse), Collections.emptyList());
@@ -196,19 +189,35 @@ public class AlgorixBidder implements Bidder<BidRequest> {
         return bidsFromResponse(bidRequest, bidResponse);
     }
 
-    private static List<BidderBid> bidsFromResponse(BidRequest bidRequest, BidResponse bidResponse) {
+    private List<BidderBid> bidsFromResponse(BidRequest bidRequest, BidResponse bidResponse) {
         return bidResponse.getSeatbid().stream()
                 .filter(Objects::nonNull)
                 .map(SeatBid::getBid)
-                .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
-                .map(bid -> BidderBid.of(bid, getBidType(bid.getImpid(), bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .filter(Objects::nonNull)
+                .map(bid -> BidderBid.of(bid, getBidType(bid, bidRequest.getImp()), bidResponse.getCur()))
+                .toList();
     }
 
-    private static BidType getBidType(String impId, List<Imp> imps) {
+    private BidType getBidType(Bid bid, List<Imp> imps) {
+        final ObjectNode bidExt = bid.getExt();
+        final JsonNode mediaTypeNode = bidExt != null ? bidExt.get("mediaType") : null;
+        final String mediaType = mediaTypeNode != null && mediaTypeNode.isTextual()
+                ? mediaTypeNode.textValue()
+                : StringUtils.EMPTY;
+
+        final BidType bidType = switch (mediaType) {
+            case "banner" -> BidType.banner;
+            case "native" -> BidType.xNative;
+            case "video" -> BidType.video;
+            default -> null;
+        };
+        if (bidType != null) {
+            return bidType;
+        }
+
         for (Imp imp : imps) {
-            if (imp.getId().equals(impId)) {
+            if (imp.getId().equals(bid.getImpid())) {
                 if (imp.getBanner() != null) {
                     return BidType.banner;
                 } else if (imp.getVideo() != null) {
