@@ -12,8 +12,8 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.pangle.model.BidExt;
@@ -33,7 +33,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class PangleBidder implements Bidder<BidRequest> {
 
@@ -70,7 +69,7 @@ public class PangleBidder implements Bidder<BidRequest> {
         try {
             return mapper.mapper().convertValue(imp.getExt(), WrappedImpExtBidder.class);
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("failed unmarshalling imp ext (err)%s", e.getMessage()));
+            throw new PreBidException("failed unmarshalling imp ext (err)" + e.getMessage());
         }
     }
 
@@ -148,7 +147,7 @@ public class PangleBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final List<BidderError> errors = new ArrayList<>();
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
@@ -172,7 +171,7 @@ public class PangleBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> createBid(bid, bidResponse.getCur(), errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidderBid createBid(Bid bid, String currency, List<BidderError> errors) {
@@ -183,25 +182,21 @@ public class PangleBidder implements Bidder<BidRequest> {
             errors.add(BidderError.badServerResponse(e.getMessage()));
             return null;
         }
-        final BidType bidType;
-        switch (adType) {
-            case 1:
-            case 2:
-                bidType = BidType.banner;
-                break;
-            case 5:
-                bidType = BidType.xNative;
-                break;
-            case 7:
-            case 8:
-                bidType = BidType.video;
-                break;
-            default:
-                errors.add(BidderError.badServerResponse("unrecognized adtype in response"));
-                return null;
-        }
+        final BidType bidType = resolveBidType(adType, errors);
 
         return BidderBid.of(bid, bidType, currency);
+    }
+
+    private static BidType resolveBidType(Integer adType, List<BidderError> errors) {
+        return switch (adType) {
+            case 1, 2 -> BidType.banner;
+            case 5 -> BidType.xNative;
+            case 7, 8 -> BidType.video;
+            default -> {
+                errors.add(BidderError.badServerResponse("unrecognized adtype in response"));
+                yield null;
+            }
+        };
     }
 
     private Integer getAdTypeFromBidExt(Bid bid) {
