@@ -35,9 +35,10 @@ import org.apache.http.client.utils.URIBuilder;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.ViewabilityVendors;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
+import org.prebid.server.bidder.model.PriceFloorInfo;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconAppExt;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconBannerExt;
@@ -48,6 +49,7 @@ import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBidders;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBiddersBidder;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconExtPrebidBiddersBidderDebug;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExt;
+import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtPrebid;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRp;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconImpExtRpTrack;
 import org.prebid.server.bidder.rubicon.proto.request.RubiconPubExt;
@@ -65,6 +67,9 @@ import org.prebid.server.bidder.rubicon.proto.response.RubiconBidResponse;
 import org.prebid.server.bidder.rubicon.proto.response.RubiconSeatBid;
 import org.prebid.server.currency.CurrencyConversionService;
 import org.prebid.server.exception.PreBidException;
+import org.prebid.server.floors.PriceFloorResolver;
+import org.prebid.server.floors.model.PriceFloorResult;
+import org.prebid.server.floors.model.PriceFloorRules;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
@@ -76,6 +81,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtDevice;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContext;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpContextDataAdserver;
 import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebid;
+import org.prebid.server.proto.openrtb.ext.request.ExtImpPrebidFloors;
 import org.prebid.server.proto.openrtb.ext.request.ExtPublisher;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
 import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
@@ -85,6 +91,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.ExtUserEid;
 import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUid;
 import org.prebid.server.proto.openrtb.ext.request.ExtUserEidUidExt;
+import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubicon;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtImpRubiconDebug;
 import org.prebid.server.proto.openrtb.ext.request.rubicon.ExtUserTpIdRubicon;
@@ -127,6 +134,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String ADSERVER_EID = "adserver.org";
     private static final String LIVEINTENT_EID = "liveintent.com";
     private static final String LIVERAMP_EID = "liveramp.com";
+    private static final String SOURCE_RUBICON = "rubiconproject.com";
 
     private static final String FPD_GPID_FIELD = "gpid";
     private static final String FPD_SECTIONCAT_FIELD = "sectioncat";
@@ -144,6 +152,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String PREBID_EXT = "prebid";
 
     private static final String PPUID_STYPE = "ppuid";
+    private static final String OTHER_STYPE = "other";
     private static final String SHA256EMAIL_STYPE = "sha256email";
     private static final String DMP_STYPE = "dmp";
     private static final String XAPI_CURRENCY = "USD";
@@ -166,6 +175,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private final Set<String> supportedVendors;
     private final boolean generateBidId;
     private final CurrencyConversionService currencyConversionService;
+    private final PriceFloorResolver floorResolver;
     private final JacksonMapper mapper;
 
     private final MultiMap headers;
@@ -176,12 +186,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
                          List<String> supportedVendors,
                          boolean generateBidId,
                          CurrencyConversionService currencyConversionService,
+                         PriceFloorResolver floorResolver,
                          JacksonMapper mapper) {
 
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpoint));
-        this.supportedVendors = new HashSet<>(supportedVendors);
+        this.supportedVendors = Set.copyOf(Objects.requireNonNull(supportedVendors));
         this.generateBidId = generateBidId;
         this.currencyConversionService = Objects.requireNonNull(currencyConversionService);
+        this.floorResolver = Objects.requireNonNull(floorResolver);
         this.mapper = Objects.requireNonNull(mapper);
 
         headers = headers(Objects.requireNonNull(xapiUsername), Objects.requireNonNull(xapiPassword));
@@ -194,12 +206,11 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         final List<Imp> imps = extractValidImps(bidRequest, errors);
         if (CollectionUtils.isEmpty(imps)) {
-            errors.add(BidderError.of("There are no valid impressions to create bid request to rubicon bidder",
-                    BidderError.Type.bad_input));
-            return Result.of(Collections.emptyList(), errors);
+            errors.add(BidderError.badInput("There are no valid impressions to create bid request to rubicon bidder"));
+            return Result.withErrors(errors);
         }
-        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt =
-                parseRubiconImpExts(imps, errors);
+
+        final Map<Imp, ExtPrebid<ExtImpPrebid, ExtImpRubicon>> impToImpExt = parseRubiconImpExts(imps, errors);
         final String impLanguage = firstImpExtLanguage(impToImpExt.values());
         final String uri = makeUri(bidRequest);
 
@@ -223,7 +234,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final List<BidderError> errors = new ArrayList<>();
             final RubiconBidResponse bidResponse =
@@ -270,9 +281,9 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private BidderError impTypeErrorMessage(Imp imp) {
         final BidType type = resolveExpectedBidType(imp);
-        return BidderError.of(
-                String.format("Impression with id %s rejected with invalid type `%s`." + " Allowed types are banner and"
-                        + " video.", imp.getId(), type != null ? type.name() : "unknown"), BidderError.Type.bad_input);
+        return BidderError.badInput(
+                "Impression with id %s rejected with invalid type `%s`. Allowed types are banner and video."
+                        .formatted(imp.getId(), type != null ? type.name() : "unknown"));
     }
 
     private static BidType resolveExpectedBidType(Imp imp) {
@@ -363,7 +374,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                         .setParameter(TK_XINT_QUERY_PARAMETER, tkXint)
                         .build().toString();
             } catch (URISyntaxException e) {
-                throw new PreBidException(String.format("Cant add the tk_xint value for url: %s", tkXint), e);
+                throw new PreBidException("Cant add the tk_xint value for url: " + tkXint, e);
             }
         }
         return endpointUrl;
@@ -401,19 +412,45 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final App app = bidRequest.getApp();
         final Site site = bidRequest.getSite();
         final ExtRequest extRequest = bidRequest.getExt();
+        final boolean isVideo = isVideo(imp);
+        final List<String> priceFloorsWarnings = new ArrayList<>();
+
+        final PriceFloorResult priceFloorResult = resolvePriceFloors(bidRequest, imp,
+                isVideo ? ImpMediaType.video : ImpMediaType.banner, priceFloorsWarnings);
+
+        final BigDecimal ipfFloor = ObjectUtil.getIfNotNull(priceFloorResult, PriceFloorResult::getFloorValue);
+        final String ipfCurrency = ipfFloor != null
+                ? resolveCurrencyFromFloorResult(
+                ObjectUtil.getIfNotNull(priceFloorResult, PriceFloorResult::getCurrency),
+                bidRequest,
+                imp,
+                errors)
+                : null;
 
         final Imp.ImpBuilder builder = imp.toBuilder()
                 .metric(makeMetrics(imp))
-                .ext(mapper.mapper().valueToTree(makeImpExt(imp, extImpRubicon, site, app, extRequest)));
+                .ext(mapper.mapper().valueToTree(
+                        makeImpExt(
+                                imp,
+                                bidRequest,
+                                extImpRubicon,
+                                site,
+                                app,
+                                extRequest,
+                                ipfCurrency,
+                                priceFloorResult)));
 
-        final BigDecimal resolvedBidFloor = resolveBidFloor(imp, bidRequest, errors);
+        final BigDecimal resolvedBidFloor = ipfFloor != null
+                ? convertToXAPICurrency(ipfFloor, ipfCurrency, imp, bidRequest)
+                : resolveBidFloorFromImp(imp, bidRequest, errors);
+
         if (resolvedBidFloor != null) {
             builder
                     .bidfloorcur(XAPI_CURRENCY)
                     .bidfloor(resolvedBidFloor);
         }
 
-        if (isVideo(imp)) {
+        if (isVideo) {
             builder
                     .banner(null)
                     .video(makeVideo(imp, extImpRubicon.getVideo(), extImpPrebid, referer(site)));
@@ -423,7 +460,28 @@ public class RubiconBidder implements Bidder<BidRequest> {
                     .video(null);
         }
 
+        processWarnings(errors, priceFloorsWarnings);
+
         return builder.build();
+    }
+
+    private PriceFloorResult resolvePriceFloors(BidRequest bidRequest,
+                                                Imp imp,
+                                                ImpMediaType mediaType,
+                                                List<String> warnings) {
+
+        return floorResolver.resolve(
+                bidRequest,
+                extractFloorRules(bidRequest),
+                imp,
+                mediaType,
+                null,
+                warnings);
+    }
+
+    private static PriceFloorRules extractFloorRules(BidRequest bidRequest) {
+        final ExtRequestPrebid prebid = ObjectUtil.getIfNotNull(bidRequest.getExt(), ExtRequest::getPrebid);
+        return ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getFloors);
     }
 
     private List<Metric> makeMetrics(Imp imp) {
@@ -449,16 +507,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return supportedVendors.contains(metric.getVendor()) && Objects.equals(metric.getType(), "viewability");
     }
 
-    private BigDecimal resolveBidFloor(Imp imp, BidRequest bidRequest, List<BidderError> errors) {
+    private BigDecimal resolveBidFloorFromImp(Imp imp, BidRequest bidRequest, List<BidderError> errors) {
         final BigDecimal resolvedBidFloorPrice = resolveBidFloorPrice(imp);
         if (resolvedBidFloorPrice == null) {
             return null;
         }
 
-        final String resolvedBidFloorCurrency = resolveBidFloorCurrency(imp, bidRequest, errors);
-        return ObjectUtils.notEqual(resolvedBidFloorCurrency, XAPI_CURRENCY)
-                ? convertBidFloorCurrency(resolvedBidFloorPrice, resolvedBidFloorCurrency, imp, bidRequest)
-                : null;
+        return convertToXAPICurrency(
+                resolvedBidFloorPrice,
+                resolveBidFloorCurrency(imp, bidRequest, errors),
+                imp,
+                bidRequest);
+    }
+
+    private BigDecimal convertToXAPICurrency(BigDecimal value,
+                                             String fromCurrency,
+                                             Imp imp,
+                                             BidRequest bidRequest) {
+
+        return ObjectUtils.notEqual(fromCurrency, XAPI_CURRENCY)
+                ? convertBidFloorCurrency(value, fromCurrency, imp, bidRequest)
+                : value;
     }
 
     private static BigDecimal resolveBidFloorPrice(Imp imp) {
@@ -470,12 +539,27 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final String bidFloorCurrency = imp.getBidfloorcur();
         if (StringUtils.isBlank(bidFloorCurrency)) {
             if (isDebugEnabled(bidRequest)) {
-                errors.add(BidderError.badInput(String.format("Imp `%s` floor provided with no currency, assuming %s",
-                        imp.getId(), XAPI_CURRENCY)));
+                errors.add(BidderError.badInput("Imp `%s` floor provided with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
             }
             return XAPI_CURRENCY;
         }
         return bidFloorCurrency;
+    }
+
+    private static String resolveCurrencyFromFloorResult(String floorCurrency,
+                                                         BidRequest bidRequest,
+                                                         Imp imp,
+                                                         List<BidderError> errors) {
+
+        if (StringUtils.isBlank(floorCurrency)) {
+            if (isDebugEnabled(bidRequest)) {
+                errors.add(BidderError.badInput("Ipf for imp `%s` provided floor with no currency, assuming %s"
+                        .formatted(imp.getId(), XAPI_CURRENCY)));
+            }
+            return XAPI_CURRENCY;
+        }
+        return floorCurrency;
     }
 
     /**
@@ -497,19 +581,25 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return currencyConversionService.convertCurrency(bidFloor, bidRequest, bidFloorCurrency, XAPI_CURRENCY);
         } catch (PreBidException e) {
-            throw new PreBidException(String.format(
-                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s",
-                    bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
+            throw new PreBidException(
+                    "Unable to convert provided bid floor currency from %s to %s for imp `%s` with a reason: %s"
+                            .formatted(bidFloorCurrency, XAPI_CURRENCY, imp.getId(), e.getMessage()));
         }
     }
 
     private RubiconImpExt makeImpExt(Imp imp,
+                                     BidRequest bidRequest,
                                      ExtImpRubicon rubiconImpExt,
                                      Site site,
                                      App app,
-                                     ExtRequest extRequest) {
+                                     ExtRequest extRequest,
+                                     String ipfResolvedCurrency,
+                                     PriceFloorResult priceFloorResult) {
 
         final ExtImpContext context = extImpContext(imp);
+        final RubiconImpExtPrebid rubiconImpExtPrebid = priceFloorResult != null
+                ? makeRubiconExtPrebid(priceFloorResult, ipfResolvedCurrency, imp, bidRequest)
+                : null;
         return RubiconImpExt.of(
                 RubiconImpExtRp.of(
                         rubiconImpExt.getZoneId(),
@@ -517,7 +607,20 @@ public class RubiconBidder implements Bidder<BidRequest> {
                         RubiconImpExtRpTrack.of("", "")),
                 mapVendorsNamesToUrls(imp.getMetric()),
                 getMaxBids(extRequest),
-                getGpid(imp.getExt()));
+                getGpid(imp.getExt()),
+                rubiconImpExtPrebid);
+    }
+
+    private ExtImpContext extImpContext(Imp imp) {
+        final JsonNode context = imp.getExt().get(FPD_CONTEXT_FIELD);
+        if (context == null || context.isNull()) {
+            return null;
+        }
+        try {
+            return mapper.mapper().convertValue(context, ExtImpContext.class);
+        } catch (IllegalArgumentException e) {
+            throw new PreBidException(e.getMessage(), e);
+        }
     }
 
     private JsonNode makeTarget(Imp imp, ExtImpRubicon rubiconImpExt, Site site, App app, ExtImpContext context) {
@@ -532,16 +635,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return result.size() > 0 ? result : null;
     }
 
-    private ExtImpContext extImpContext(Imp imp) {
-        final JsonNode context = imp.getExt().get(FPD_CONTEXT_FIELD);
-        if (context == null || context.isNull()) {
-            return null;
-        }
-        try {
-            return mapper.mapper().convertValue(context, ExtImpContext.class);
-        } catch (IllegalArgumentException e) {
-            throw new PreBidException(e.getMessage(), e);
-        }
+    private RubiconImpExtPrebid makeRubiconExtPrebid(PriceFloorResult priceFloorResult,
+                                                     String currency,
+                                                     Imp imp,
+                                                     BidRequest bidRequest) {
+        return RubiconImpExtPrebid.of(ExtImpPrebidFloors.of(
+                priceFloorResult.getFloorRule(),
+                convertToXAPICurrency(priceFloorResult.getFloorRuleValue(), currency, imp, bidRequest),
+                convertToXAPICurrency(priceFloorResult.getFloorValue(), currency, imp, bidRequest)));
     }
 
     private void mergeFirstPartyDataFromSite(Site site, ObjectNode result) {
@@ -736,7 +837,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return StreamSupport.stream(booleanArray.spliterator(), false)
                 .map(JsonNode::booleanValue)
                 .map(value -> Boolean.toString(value))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> mapVendorsNamesToUrls(List<Metric> metrics) {
@@ -746,7 +847,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final List<String> vendorsUrls = metrics.stream()
                 .filter(this::isMetricSupported)
                 .map(metric -> ViewabilityVendors.valueOf(metric.getVendor()).getUrl())
-                .collect(Collectors.toList());
+                .toList();
         return vendorsUrls.isEmpty() ? null : vendorsUrls;
     }
 
@@ -848,8 +949,10 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static void validateVideoSizeId(Integer resolvedSizeId, String referer, String impId) {
         // log only 1% of cases to monitor how often video impressions does not have size id
         if (resolvedSizeId == null) {
-            MISSING_VIDEO_SIZE_LOGGER.warn(String.format("RP adapter: video request with no size_id. Referrer URL = %s,"
-                    + " impId = %s", referer, impId), 0.01d);
+            MISSING_VIDEO_SIZE_LOGGER.warn(
+                    "RP adapter: video request with no size_id. Referrer URL = %s, impId = %s"
+                            .formatted(referer, impId),
+                    0.01d);
         }
     }
 
@@ -916,7 +1019,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .map(RubiconSize::toId)
                 .filter(id -> id > 0)
                 .sorted(RubiconSize.comparator())
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(ArrayList::new));
 
         if (validRubiconSizeIds.isEmpty()) {
             // FIXME: Added 11.11.2020. short term solution for full screen interstitial adunits (PR #1003)
@@ -938,6 +1041,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final ExtUser extUser = user != null ? user.getExt() : null;
         final String resolvedId = userId == null ? resolveUserId(extUser) : null;
         final List<ExtUserEid> extUserEids = extUser != null ? extUser.getEids() : null;
+        final String userBuyeruid = user != null ? user.getBuyeruid() : null;
+        final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(extUserEids);
         final Map<String, List<ExtUserEid>> sourceToUserEidExt = extUser != null
                 ? specialExtUserEids(extUserEids)
                 : null;
@@ -952,8 +1057,13 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final ObjectNode userExtData = extUser != null ? extUser.getData() : null;
         final String liverampId = extractLiverampId(sourceToUserEidExt);
 
-        if (userExtRp == null && userExtTpIds == null && userExtData == null && liverampId == null
-                && resolvedId == null && !hasStypeToRemove) {
+        if (userExtRp == null
+                && userExtTpIds == null
+                && userExtData == null
+                && liverampId == null
+                && resolvedId == null
+                && Objects.equals(userBuyeruid, resolvedBuyeruid)
+                && !hasStypeToRemove) {
             return user;
         }
 
@@ -975,6 +1085,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         return userBuilder
                 .id(ObjectUtils.defaultIfNull(resolvedId, userId))
+                .buyeruid(resolvedBuyeruid)
                 .gender(null)
                 .yob(null)
                 .geo(null)
@@ -1022,14 +1133,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return CollectionUtils.emptyIfNull(extUserEids).stream()
                 .filter(Objects::nonNull)
                 .map(RubiconBidder::prepareExtUserEid)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static ExtUserEid prepareExtUserEid(ExtUserEid extUserEid) {
         final List<ExtUserEidUid> extUserEidUids = CollectionUtils.emptyIfNull(extUserEid.getUids()).stream()
                 .filter(Objects::nonNull)
                 .map(RubiconBidder::cleanExtUserEidUidStype)
-                .collect(Collectors.toList());
+                .toList();
         return ExtUserEid.of(extUserEid.getSource(), extUserEid.getId(), extUserEidUids, extUserEid.getExt());
     }
 
@@ -1039,6 +1150,28 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 ? extUserEidUid
                 : ExtUserEidUid.of(extUserEidUid.getId(), extUserEidUid.getAtype(),
                 ExtUserEidUidExt.of(extUserEidUidExt.getRtiPartner(), null));
+    }
+
+    private static String resolveBuyeruidFromEids(List<ExtUserEid> eids) {
+        return CollectionUtils.emptyIfNull(eids).stream()
+                .filter(Objects::nonNull)
+                .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
+                .map(ExtUserEid::getUids)
+                .filter(Objects::nonNull)
+                .flatMap(Collection::stream)
+                .filter(Objects::nonNull)
+                .filter(RubiconBidder::validateExtUserEidUidForUserBuyeruid)
+                .map(ExtUserEidUid::getId)
+                .findFirst()
+                .orElse(null);
+
+    }
+
+    private static boolean validateExtUserEidUidForUserBuyeruid(ExtUserEidUid uid) {
+        final ExtUserEidUidExt uidExt = ObjectUtil.getIfNotNull(uid, ExtUserEidUid::getExt);
+        final String uidExtStype = ObjectUtil.getIfNotNull(uidExt, ExtUserEidUidExt::getStype);
+
+        return StringUtils.equalsAny(uidExtStype, PPUID_STYPE, OTHER_STYPE);
     }
 
     private static Map<String, List<ExtUserEid>> specialExtUserEids(List<ExtUserEid> eids) {
@@ -1156,7 +1289,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .flatMap(segments -> segments.stream()
                         .map(Segment::getId))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (CollectionUtils.isNotEmpty(iabValue)) {
             final ArrayNode iab = target.putArray("iab");
@@ -1180,6 +1313,12 @@ public class RubiconBidder implements Bidder<BidRequest> {
                     .orElse(null);
         }
         return null;
+    }
+
+    private void processWarnings(List<BidderError> errors, List<String> priceFloorsWarnings) {
+        if (CollectionUtils.isNotEmpty(priceFloorsWarnings)) {
+            priceFloorsWarnings.forEach(warning -> errors.add(BidderError.badInput(warning)));
+        }
     }
 
     private Device makeDevice(Device device) {
@@ -1302,7 +1441,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .map(lineItem -> createLineItemBidRequest(lineItem, bidRequest, singleImp))
                 .map((BidRequest request) -> createHttpRequest(request, uri))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BidRequest createLineItemBidRequest(ExtDealLine lineItem, BidRequest bidRequest, Imp imp) {
@@ -1334,7 +1473,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 impExtRp.getTrack());
 
         return mapper.mapper().valueToTree(RubiconImpExt.of(modifiedImpExtRp, rubiconImpExt.getViewabilityvendors(),
-                getMaxBids(extRequest), adSlot));
+                getMaxBids(extRequest), adSlot, null));
     }
 
     private List<BidderBid> extractBids(BidRequest prebidRequest,
@@ -1352,6 +1491,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                                              List<BidderError> errors) {
         final Map<String, Imp> idToImp = prebidRequest.getImp().stream()
                 .collect(Collectors.toMap(Imp::getId, Function.identity()));
+        final Map<String, Imp> idToRubiconImp = bidRequest.getImp().stream()
+                .collect(Collectors.toMap(Imp::getId, Function.identity()));
         final Float cpmOverrideFromRequest = cpmOverrideFromRequest(prebidRequest);
         final BidType bidType = bidType(bidRequest);
 
@@ -1362,8 +1503,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> updateBid(bid, idToImp.get(bid.getImpid()), cpmOverrideFromRequest, bidResponse))
-                .map(bid -> BidderBid.of(bid, bidType, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .map(bid -> createBidderBid(bid, idToRubiconImp.get(bid.getImpid()), bidType, bidResponse.getCur()))
+                .toList();
     }
 
     private RubiconSeatBid updateSeatBids(RubiconSeatBid seatBid, List<BidderError> errors) {
@@ -1375,7 +1516,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final List<Bid> updatedBids = seatBid.getBid().stream()
                 .map(bid -> insertNetworkIdToMeta(bid, networkId, errors))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return seatBid.toBuilder().bid(updatedBids).build();
     }
 
@@ -1408,7 +1549,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         try {
             return bidExt != null ? mapper.mapper().convertValue(bidExt, EXT_PREBID_TYPE_REFERENCE) : null;
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("Invalid ext passed in bid with id: %s", bidId));
+            throw new PreBidException("Invalid ext passed in bid with id: " + bidId);
         }
     }
 
@@ -1433,6 +1574,16 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return bid.toBuilder()
                 .id(bidId)
                 .price(bidPrice)
+                .build();
+    }
+
+    private static BidderBid createBidderBid(Bid bid, Imp imp, BidType bidType, String currency) {
+
+        return BidderBid.builder()
+                .bid(bid)
+                .type(bidType)
+                .bidCurrency(currency)
+                .priceFloorInfo(imp != null ? PriceFloorInfo.of(imp.getBidfloor(), imp.getBidfloorcur()) : null)
                 .build();
     }
 
