@@ -43,11 +43,11 @@ class StageMetrics extends UpdatableMetrics {
     }
 
     private static Function<MetricName, String> nameCreator(String prefix) {
-        return metricName -> String.format("%s.%s", prefix, metricName.toString());
+        return metricName -> "%s.%s".formatted(prefix, metricName);
     }
 
     private static String createPrefix(String prefix, Stage stage) {
-        return String.format("%s.stage.%s", prefix, STAGE_TO_METRIC.getOrDefault(stage, UNKNOWN_STAGE));
+        return "%s.stage.%s".formatted(prefix, STAGE_TO_METRIC.getOrDefault(stage, UNKNOWN_STAGE));
     }
 
     HookImplMetrics hookImpl(String hookImpl) {
