@@ -74,11 +74,7 @@ public class PrivacyExtractor {
         return toValidPrivacy(gdpr, consent, usPrivacy, coppa, errors);
     }
 
-    private static Privacy toValidPrivacy(String gdpr,
-                                          String consent,
-                                          String usPrivacy,
-                                          Integer coppa,
-                                          List<String> errors) {
+    public Privacy toValidPrivacy(String gdpr, String consent, String usPrivacy, Integer coppa, List<String> errors) {
         final String validGdpr = ObjectUtils.notEqual(gdpr, "1") && ObjectUtils.notEqual(gdpr, "0")
                 ? DEFAULT_GDPR_VALUE
                 : gdpr;
@@ -94,7 +90,7 @@ public class PrivacyExtractor {
             Ccpa.validateUsPrivacy(usPrivacy);
             return Ccpa.of(usPrivacy);
         } catch (PreBidException e) {
-            final String message = String.format("CCPA consent %s has invalid format: %s", usPrivacy, e.getMessage());
+            final String message = "CCPA consent %s has invalid format: %s".formatted(usPrivacy, e.getMessage());
             logger.debug(message);
             if (errors != null) {
                 errors.add(message);
