@@ -83,7 +83,7 @@ public final class HttpUtil {
         try {
             return new URL(url).toString();
         } catch (MalformedURLException e) {
-            throw new IllegalArgumentException(String.format("URL supplied is not valid: %s", url), e);
+            throw new IllegalArgumentException("URL supplied is not valid: " + url, e);
         }
     }
 
@@ -141,8 +141,8 @@ public final class HttpUtil {
         try {
             return ZonedDateTime.parse(isoTimeStamp);
         } catch (Exception e) {
-            throw new PreBidException(String.format("%s header is not compatible to ISO-8601 format: %s",
-                    header, isoTimeStamp));
+            throw new PreBidException(
+                    "%s header is not compatible to ISO-8601 format: %s".formatted(header, isoTimeStamp));
         }
     }
 
@@ -198,7 +198,7 @@ public final class HttpUtil {
 
         if (response.closed()) {
             conditionalLogger.warn(
-                    String.format("Client already closed connection, response to %s will be skipped", endpoint),
+                    "Client already closed connection, response to %s will be skipped".formatted(endpoint),
                     0.01);
             return false;
         }
@@ -216,8 +216,8 @@ public final class HttpUtil {
      * Creates standart basic auth header value
      */
     public static String makeBasicAuthHeaderValue(String username, String password) {
-        return String.format(BASIC_AUTH_PATTERN, Base64.getEncoder().encodeToString((username + ':' + password)
-                .getBytes()));
+        return BASIC_AUTH_PATTERN
+                .formatted(Base64.getEncoder().encodeToString((username + ':' + password).getBytes()));
     }
 
     /**
@@ -232,7 +232,7 @@ public final class HttpUtil {
                         entry -> StringUtils.isNotBlank(entry.getValue())
                                 ? Arrays.stream(entry.getValue().split(","))
                                 .map(String::trim)
-                                .collect(Collectors.toList())
+                                .toList()
                                 : Collections.singletonList(entry.getValue())))
                 : null;
     }
