@@ -24,9 +24,9 @@ import org.mockito.junit.MockitoRule;
 import org.prebid.server.VertxTest;
 import org.prebid.server.auction.model.BidderRequest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderSeatBid;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -46,7 +46,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeoutException;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
@@ -97,7 +96,8 @@ public class HttpBidderRequesterTest extends VertxTest {
         given(bidderErrorNotifier.processTimeout(any(), any())).will(invocation -> invocation.getArgument(0));
         given(routingContext.request()).willReturn(httpServerRequest);
         given(httpServerRequest.headers()).willReturn(MultiMap.caseInsensitiveMultiMap());
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(MultiMap.caseInsensitiveMultiMap());
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any()))
+                .willReturn(MultiMap.caseInsensitiveMultiMap());
 
         final Clock clock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
         final TimeoutFactory timeoutFactory = new TimeoutFactory(clock);
@@ -175,7 +175,8 @@ public class HttpBidderRequesterTest extends VertxTest {
 
         // then
         verifyNoInteractions(httpClient);
-        final ArgumentCaptor<HttpCall<BidRequest>> httpCallArgumentCaptor = ArgumentCaptor.forClass(HttpCall.class);
+        final ArgumentCaptor<BidderCall<BidRequest>> httpCallArgumentCaptor =
+                ArgumentCaptor.forClass(BidderCall.class);
         verify(bidder).makeBids(httpCallArgumentCaptor.capture(), any());
         assertThat(httpCallArgumentCaptor.getValue().getResponse())
                 .extracting(HttpResponse::getBody)
@@ -307,7 +308,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
         givenHttpClientResponse(200, "responseBody");
         final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
 
@@ -482,7 +483,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(
                 HttpClientResponse.of(200, null, "responseBody1"),
@@ -498,15 +499,21 @@ public class HttpBidderRequesterTest extends VertxTest {
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(2).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(firstBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactlyInAnyOrder(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(firstBidRequest))
                         .responsebody("responseBody1")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
-                        .status(200).build(),
-                ExtHttpCall.builder().uri("uri2").requestbody(mapper.writeValueAsString(secondBidRequest))
+                        .status(200)
+                        .build(),
+                ExtHttpCall.builder()
+                        .uri("uri2")
+                        .requestbody(mapper.writeValueAsString(secondBidRequest))
                         .responsebody("responseBody2")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
-                        .status(200).build());
+                        .status(200)
+                        .build());
     }
 
     @Test
@@ -523,7 +530,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .headers(headers)
                                 .build()),
                 emptyList()));
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(
                 HttpClientResponse.of(200, null, "responseBody1"));
@@ -558,7 +565,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
 
         final BidderRequest bidderRequest = BidderRequest.of("bidder", null, BidRequest.builder().build());
 
@@ -568,8 +575,10 @@ public class HttpBidderRequesterTest extends VertxTest {
                         true).result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(givenBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .build());
     }
@@ -589,7 +598,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientProducesException(new RuntimeException("Request exception"));
 
@@ -601,8 +610,9 @@ public class HttpBidderRequesterTest extends VertxTest {
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1")
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
                         .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .build());
@@ -623,7 +633,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .build()),
                 emptyList()));
 
-        given(requestEnricher.enrichHeaders(any(), any(), any())).willReturn(headers);
+        given(requestEnricher.enrichHeaders(anyString(), any(), any(), any())).willReturn(headers);
 
         givenHttpClientReturnsResponses(HttpClientResponse.of(500, null, "responseBody1"));
 
@@ -635,14 +645,17 @@ public class HttpBidderRequesterTest extends VertxTest {
                         .result();
 
         // then
-        assertThat(bidderSeatBid.getHttpCalls()).hasSize(1).containsOnly(
-                ExtHttpCall.builder().uri("uri1").requestbody(mapper.writeValueAsString(givenBidRequest))
+        assertThat(bidderSeatBid.getHttpCalls()).containsExactly(
+                ExtHttpCall.builder()
+                        .uri("uri1")
+                        .requestbody(mapper.writeValueAsString(givenBidRequest))
                         .responsebody("responseBody1")
                         .requestheaders(singletonMap("headerKey", singletonList("headerValue")))
                         .status(500).build());
-        assertThat(bidderSeatBid.getErrors()).hasSize(1)
-                .extracting(BidderError::getMessage).containsOnly(
-                        "Unexpected status code: 500. Run with request.test = 1 for more info");
+
+        assertThat(bidderSeatBid.getErrors())
+                .extracting(BidderError::getMessage)
+                .containsExactly("Unexpected status code: 500. Run with request.test = 1 for more info");
     }
 
     @Test
@@ -742,7 +755,7 @@ public class HttpBidderRequesterTest extends VertxTest {
                                 .headers(MultiMap.caseInsensitiveMultiMap())
                                 .build()),
                 singletonList(BidderError.badInput("makeHttpRequestsError"))));
-        when(requestEnricher.enrichHeaders(any(), any(), any()))
+        when(requestEnricher.enrichHeaders(anyString(), any(), any(), any()))
                 .thenAnswer(invocation -> MultiMap.caseInsensitiveMultiMap());
         given(httpClient.request(any(), anyString(), any(), any(byte[].class), anyLong()))
                 // simulate response error for the first request
@@ -818,7 +831,7 @@ public class HttpBidderRequesterTest extends VertxTest {
     private static BidRequest bidRequestWithDeals(String... ids) {
         final List<Imp> impsWithDeals = Arrays.stream(ids)
                 .map(HttpBidderRequesterTest::impWithDeal)
-                .collect(Collectors.toList());
+                .toList();
         return BidRequest.builder().imp(impsWithDeals).build();
     }
 
