@@ -15,8 +15,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -30,7 +30,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static java.util.function.UnaryOperator.identity;
@@ -126,7 +125,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfResponseBodyCouldNotBeParsed() {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, "invalid");
 
         // when
         final Result<List<BidderBid>> result = iqZoneBidder.makeBids(httpCall, null);
@@ -143,7 +142,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnEmptyResponseIfBidResponseIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null, mapper.writeValueAsString(null));
 
         // when
         final Result<List<BidderBid>> result = iqZoneBidder.makeBids(httpCall, null);
@@ -156,7 +155,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnEmptyResponseIfBidResponseSeatBidIsNull() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(null,
+        final BidderCall<BidRequest> httpCall = givenHttpCall(null,
                 mapper.writeValueAsString(BidResponse.builder().seatbid(null).build()));
 
         // when
@@ -170,7 +169,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldCorrectlyProceedWithVideo() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
                         .id("someId").video(Video.builder().build())),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("someId"))));
 
@@ -186,7 +185,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldCorrectlyProceedWithNative() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
                         .id("someId").xNative(Native.builder().build())),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("someId"))));
 
@@ -202,7 +201,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldCorrectlyProceedWithBanner() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
                         .id("someId").banner(Banner.builder().build())),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("someId"))));
 
@@ -218,7 +217,7 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorIfImpIdDoesNotMatchImpIdInBid() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder
                         .id("someIdThatIsDifferentFromIDInBid").xNative(Native.builder().build())),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("someId"))));
 
@@ -237,7 +236,8 @@ public class IqzoneBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnErrorWhenMissingType() throws JsonProcessingException {
         // given
-        final HttpCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(impBuilder -> impBuilder.id("someId")),
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(impBuilder -> impBuilder.id("someId")),
                 mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("someId"))));
 
         // when
@@ -261,8 +261,8 @@ public class IqzoneBidderTest extends VertxTest {
                 .build();
     }
 
-    private static HttpCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
-        return HttpCall.success(
+    private static BidderCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body) {
+        return BidderCall.succeededHttp(
                 HttpRequest.<BidRequest>builder().payload(bidRequest).build(),
                 HttpResponse.of(200, null, body),
                 null);
@@ -274,7 +274,7 @@ public class IqzoneBidderTest extends VertxTest {
                 .seatbid(singletonList(SeatBid.builder()
                         .bid(Arrays.stream(bidCustomizers)
                                 .map(bidCustomizer -> bidCustomizer.apply(Bid.builder()).build())
-                                .collect(Collectors.toList()))
+                                .toList())
                         .build()))
                 .ext(ExtBidResponse.builder().build())
                 .build();
@@ -292,7 +292,7 @@ public class IqzoneBidderTest extends VertxTest {
                         BidRequest.builder()
                                 .imp(impCustomizers.stream()
                                         .map(IqzoneBidderTest::givenImp)
-                                        .collect(Collectors.toList())))
+                                        .toList()))
                 .build();
     }
 }
